# cpu_chatbot_tutorial

./: .gitignore  README.md  pyproject.toml
01_LLM_API/: eg_cerebras_chatbot.py  eg_cerebras_stream_chatbot.py  eg_ollama_stream_chatbot.py  eg_openai.py  eg_openai_chatbot.py  eg_openai_models.py  eg_openrouter_chatbot.py
02_embedding/: eg_bge-m3.py  eg_openai_embedding.py  eg_openai_embedding_basic.py  eg_openai_embeeding_2d.py  embedding.md
03_vectordb/: README.md  eg_chroma_add.py  eg_chroma_bge-m3.py  eg_chroma_delete.py  eg_chroma_update.py  eg_cross_encoder.py
0_Basic/: minimal_backprop.py
output/: embeddings_2d.json
