[project]
name = "cpu-chatbot-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cerebras-cloud-sdk>=1.56.1",
    "chromadb>=1.3.4",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=2.6.1",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=5.1.2",
]
